Se agregó imagen del loro

--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>El León</title>
+    <title>Loro</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <header>
-        <h1>El León</h1>
-    </header>
+    <p class="credito">
+        FOTOGRAFÍA DE NATIONAL GEOGRAPHIC
+    </p>
 
-    <section>
-        <h2>Descripción</h2>
-        <p>Aquí irá la descripción del animal.</p>
-    </section>
+    <div class="card">
+        <div class="info">
+            <p><strong>NOMBRE COMÚN:</strong> Loro</p>
+            <p><strong>NOMBRE CIENTÍFICO:</strong> <em>Psittacidae</em></p>
+            <p><strong>CLASE:</strong> Ave</p>
+            <p><strong>VIDA MEDIA EN LIBERTAD:</strong> 30 a 50 años</p>
+            <p><strong>TAMAÑO:</strong> De 10 cm a 1 metro</p>
+            <p><strong>PESO:</strong> De 30 gramos a 1,5 kilos</p>
+            <p><strong>HÁBITAT:</strong> Selvas tropicales</p>
+            <p><strong>ALIMENTACIÓN:</strong> Frutas y semillas</p>
+        </div>
 
-    <section>
-        <h2>Características</h2>
-        <ul>
-            <li>Hábitat:</li>
-            <li>Alimentación:</li>
-            <li>Comportamiento:</li>
-        </ul>
-    </section>
+        <div class="imagen">
+            <img src="loro.jpg" alt="Loro de colores posado en una rama">
+        </div>
+    </div>
 
     <button onclick="cambiarTema()">Cambiar tema</button>
 
